--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <title>VARO</title>
 
-    <link rel="icon" type="image/png" href="assets//images/favicon.ico" />
+    <link rel="icon" type="image/png" href="assets/images/favicon.ico" />
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
     <link
